Moved center circle out to SVG to prevent blurring.

--- a/TeamPerformance/app/style.css
+++ b/TeamPerformance/app/style.css
@@ -1,5 +1,10 @@
-div, button, canvas {
+div, button {
 	margin: 1rem;
+}
+
+canvas {
+	height: 400;
+	width: 400;
 }
 
 button {
@@ -26,19 +31,27 @@ button[disabled=true] {
 	position: relative;
 }
 
-.wheel-container canvas {
-	filter: "blur(3px)";
-}
-
 
 .stopper {
 	position: absolute;
-    top: 365;
-    left: 780;
+    top: 150;
+    left: 380;
 }
 
 .stopper polygon {
 	fill:lime;
 	stroke:green;
 	stroke-width:5;
+}
+
+.center {
+	position: absolute;
+    top: 150;
+    left: 150;
+}
+
+.center circle {
+	fill: yellow;
+	stroke: red;
+	stroke-width:2;
 }
